[project]
name = "routers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "binance-connector>=3.12.0",
    "binance-futures-connector>=4.1.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

# Disable checking if imports are installed
ignore_missing_imports = true

# Allow functions to return Any
warn_return_any = false

# Disable specific error codes globally
disable_error_code = ["misc", "index", "call-arg"]
